# aws-ec2-devkit-vscode

./: .pre-commit-config.yaml  LICENSE  README.md  delete.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  memo.md  requirements.txt
.devcontainer/cpu/: Dockerfile  devcontainer.json
.devcontainer/cpu-uv/: Dockerfile  devcontainer.json
.devcontainer/gpu/: Dockerfile  devcontainer.json
.devcontainer/gpu-sagemaker/: Dockerfile  devcontainer.json  init.sh  requirements.txt
.devcontainer/gpu-uv/: Dockerfile  devcontainer.json
doc/: coding-guidelines.md  quickstart.md
docs/: coding-guidelines.md  operation_ec2.md  quickstart.md
mnist_example/: mnist.py
ops_ec2/: lambda_function.py
ops_lambda/: lambda_function.py
setup/: make_new_project.sh  vscode_settings.json  vscode_vm_setup.sh
setup/.ssh/: config_linux  config_win
setup/cf-template/: cf-ec2-v2.yaml  cf-ec2.yaml
setup/check_vm_env/: check_cuda_torch.sh
setup/coding_agent/: setup_claude_code.sh
setup/coding_agent/claude-code/: README.md  setup_claude_code.sh
setup/coding_agent/cline/: .clinerules  README.md
setup/get_aws_keypair/: get_key_linux.sh  get_key_win.bat
setup/ssh/: ssh_setup_linux.sh  ssh_setup_win.bat
setup/vscode/: vscode_local_setup.sh  vscode_local_setup_linux.sh  vscode_local_setup_win.bat  vscode_settings.json  vscode_vm_setup.sh
src/: main.py
